logs/Slang/generated/hdlconv/hdlconvertor_p834.sv.log
name: hdlconvertor_p834
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p834.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p834.sv:1:1: error: expected member
primitive srff (q, s, r);
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p834.sv:5:1: error: expected member
table
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p834.sv:8:1: error: expected member
f 0 : 1 : - ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p834.sv:9:1: error: expected member
0 r : ? : 0 ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p834.sv:10:1: error: expected member
0 f : 0 : - ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p834.sv:11:1: error: expected member
1 1 : ? : 0 ;
^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p834.sv:12:1: error: expected member
endtable
^~~~~~~~
